--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               </a>
               <a class="u-social-url" target="_blank" data-type="Github" title="Github" href="https://github.com/Tahabozkurt">
                 <span class="u-file-icon u-icon u-social-github u-social-icon u-icon-3">
-                  <img src=".images/919847.png" alt="">
+                  <img src="./919847.png" alt="">
                 </span>
               </a>
             </div>
@@ -94,7 +94,7 @@
             <div class="u-layout-row" style="">
               <div class="u-container-style u-layout-cell u-size-24 u-layout-cell-1">
                 <div class="u-container-layout u-container-layout-1">
-                  <img class="u-image u-image-default u-image-1" src=".images/WhatsAppImage2024-12-14at14.15.10.jpeg" alt="" data-image-width="1734" data-image-height="3072" data-animation-name="customAnimationIn" data-animation-duration="2000" data-animation-delay="0">
+                  <img class="u-image u-image-default u-image-1" src="./WhatsAppImage2024-12-14at14.15.10.jpeg" alt="" data-image-width="1734" data-image-height="3072" data-animation-name="customAnimationIn" data-animation-duration="2000" data-animation-delay="0">
                 </div>
               </div>
               <div class="u-align-right u-container-align-right u-container-style u-image u-layout-cell u-size-36 u-image-2" data-image-width="2266" data-image-height="2926">
@@ -115,37 +115,37 @@
           <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1">
               <h4 class="u-align-center u-text u-text-3"> Python Programming for Data Science</h4>
-              <img class="custom-expanded u-image u-image-1" src=".images/EkranResmi2024-12-1621.44.13.png" data-image-width="2274" data-image-height="1756">
+              <img class="custom-expanded u-image u-image-1" src="./EkranResmi2024-12-1621.44.13.png" data-image-width="2274" data-image-height="1756">
             </div>
           </div>
           <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
               <h4 class="u-align-center u-text u-text-4">Python Programming with YTÜ </h4>
-              <img class="custom-expanded u-file-link u-image u-image-2" src=".images/EkranResmi2024-12-1621.44.13.png" data-image-width="2274" data-image-height="1756" data-href="files/TahaBozkurt.pdf" data-target="_blank">
+              <img class="custom-expanded u-file-link u-image u-image-2" src="./EkranResmi2024-12-1621.44.13.png" data-image-width="2274" data-image-height="1756" data-href="files/TahaBozkurt.pdf" data-target="_blank">
             </div>
           </div>
           <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-3" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
               <h4 class="u-align-center u-text u-text-5"> Data Science &amp;&amp; Al Day 2024</h4>
-              <img class="custom-expanded u-file-link u-image u-image-3" src=".images/EkranResmi2024-12-1621.47.03.png" data-image-width="2842" data-image-height="1504" data-href="files/certificate.pdf" data-target="_blank">
+              <img class="custom-expanded u-file-link u-image u-image-3" src="./EkranResmi2024-12-1621.47.03.png" data-image-width="2842" data-image-height="1504" data-href="files/certificate.pdf" data-target="_blank">
             </div>
           </div>
           <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-4" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
               <h4 class="u-align-center u-text u-text-6">Artificial lntelligence Training </h4>
-              <img class="custom-expanded u-file-link u-image u-image-4" src=".images/EkranResmi2024-12-1621.47.18.png" data-image-width="2138" data-image-height="1506" data-href="files/Tahabozkurt.png" data-target="_blank">
+              <img class="custom-expanded u-file-link u-image u-image-4" src="./EkranResmi2024-12-1621.47.18.png" data-image-width="2138" data-image-height="1506" data-href="files/Tahabozkurt.png" data-target="_blank">
             </div>
           </div>
           <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-5" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5">
               <h4 class="u-align-center u-text u-text-7">Zirve23 ​&amp; 42lstanbul</h4>
-              <img class="custom-expanded u-image u-image-5" src=".images/WhatsAppImage2024-12-14at14.15.10.jpeg" data-image-width="1734" data-image-height="3072">
+              <img class="custom-expanded u-image u-image-5" src="./WhatsAppImage2024-12-14at14.15.10.jpeg" data-image-width="1734" data-image-height="3072">
             </div>
           </div>
           <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-6" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-6">
               <h4 class="u-align-center u-text u-text-8"> My Game Projects</h4>
-              <img class="custom-expanded u-file-link u-image u-image-6" src=".images/EkranResmi2024-12-1622.11.30.png" data-image-width="1192" data-image-height="1056" data-href="files/adamasmaca.rtf" data-target="_blank">
+              <img class="custom-expanded u-file-link u-image u-image-6" src="./EkranResmi2024-12-1622.11.30.png" data-image-width="1192" data-image-height="1056" data-href="files/adamasmaca.rtf" data-target="_blank">
             </div>
           </div>
         </div>
@@ -270,7 +270,7 @@
                         <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
                           <h5 class="u-align-left u-text u-text-2">
                             <span class="u-file-icon u-icon">
-                              <img src=".images/999735.png" alt="">
+                              <img src="./999735.png" alt="">
                             </span> student number 
                           </h5>
                           <p class="u-align-left u-text u-text-3">030722023</p>
@@ -280,7 +280,7 @@
                         <div class="u-container-layout u-similar-container u-valign-top u-container-layout-4">
                           <h5 class="u-align-left u-text u-text-4">
                             <span class="u-file-icon u-icon">
-                              <img src=".images/542689.png" alt="">
+                              <img src="./542689.png" alt="">
                             </span>&nbsp;e-mail
                           </h5>
                           <p class="u-align-left u-text u-text-5">030722023@std.izu.edu.tr</p>
@@ -290,7 +290,7 @@
                         <div class="u-container-layout u-similar-container u-valign-top u-container-layout-5">
                           <h5 class="u-align-left u-text u-text-6">
                             <span class="u-file-icon u-icon">
-                              <img src=".images/3874147.png" alt="">
+                              <img src="./3874147.png" alt="">
                             </span>My school
                           </h5>
                           <p class="u-align-left u-text u-text-7">Istanbul Sabahattin Zaim University</p>
