--- a/index.html
+++ b/index.html
@@ -87,25 +87,39 @@
         </div>
       </div>
     </section>
-    <section class="u-clearfix u-gradient u-section-2" id="sec-37a1">
-      <div class="u-clearfix u-sheet u-sheet-1">
+<section class="u-clearfix u-gradient u-section-2" id="sec-37a1">
+    <div class="u-clearfix u-sheet u-sheet-1">
         <div class="data-layout-selected u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
-          <div class="u-layout" style="">
-            <div class="u-layout-row" style="">
-              <div class="u-container-style u-layout-cell u-size-24 u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-1">
-                  <img class="u-image u-image-default u-image-1" src="./WhatsAppImage2024-12-14at14.15.10.jpeg" alt="" data-image-width="1734" data-image-height="3072" data-animation-name="customAnimationIn" data-animation-duration="2000" data-animation-delay="0">
+            <div class="u-layout">
+                <div class="u-layout-row">
+                    <!-- Sol üstteki resim -->
+                    <div class="u-container-style u-layout-cell u-size-24 u-layout-cell-1">
+                        <div class="u-container-layout u-container-layout-1">
+                            <img class="u-image u-image-default u-image-1" 
+                                 src="./WhatsAppImage2024-12-14at14.15.10.jpeg" 
+                                 alt="Sol Resim" 
+                                 data-image-width="1734" 
+                                 data-image-height="3072" 
+                                 data-animation-name="customAnimationIn" 
+                                 data-animation-duration="2000" 
+                                 data-animation-delay="0">
+                        </div>
+                    </div>
+                    <!-- Sağ alt resim alanı -->
+                    <div class="u-container-style u-layout-cell u-size-36 u-layout-cell-2">
+                        <div class="u-container-layout u-valign-bottom u-container-layout-2">
+                            <img class="u-image u-image-default u-image-2" 
+                                 src="./resim2.png" 
+                                 alt="Sağ Alt Resim" 
+                                 style="position: absolute; right: 30px; bottom: 35px; width: 700px; height: auto;">
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="u-align-right u-container-align-right u-container-style u-image u-layout-cell u-size-36 u-image-2" data-image-width="2266" data-image-height="2926">
-                <div class="u-container-layout u-valign-top-sm u-valign-top-xs u-container-layout-2">
-                </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
-    </section>
+    </div>
+</section>
+
     <section class="u-align-center u-clearfix u-gradient u-section-3" src="" id="carousel_00e5">
       <div class="u-expanded-width u-gradient u-shape u-shape-rectangle u-shape-1"></div>
       <h2 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500"> My certificates, Projects and Events I Attended</h2>
@@ -118,36 +132,73 @@
               <img class="custom-expanded u-image u-image-1" src="./EkranResmi2024-12-1621.44.13.png" data-image-width="2274" data-image-height="1756">
             </div>
           </div>
-          <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
-              <h4 class="u-align-center u-text u-text-4">Python Programming with YTÜ </h4>
-              <img class="custom-expanded u-file-link u-image u-image-2" src="./EkranResmi2024-12-1621.44.13.png" data-image-width="2274" data-image-height="1756" data-href="files/TahaBozkurt.pdf" data-target="_blank">
-            </div>
-          </div>
-          <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-3" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
-              <h4 class="u-align-center u-text u-text-5"> Data Science &amp;&amp; Al Day 2024</h4>
-              <img class="custom-expanded u-file-link u-image u-image-3" src="./EkranResmi2024-12-1621.47.03.png" data-image-width="2842" data-image-height="1504" data-href="files/certificate.pdf" data-target="_blank">
-            </div>
-          </div>
-          <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-4" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
-              <h4 class="u-align-center u-text u-text-6">Artificial lntelligence Training </h4>
-              <img class="custom-expanded u-file-link u-image u-image-4" src="./EkranResmi2024-12-1621.47.18.png" data-image-width="2138" data-image-height="1506" data-href="files/Tahabozkurt.png" data-target="_blank">
-            </div>
-          </div>
+<div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-2" 
+     data-animation-name="customAnimationIn" 
+     data-animation-duration="1500" 
+     data-animation-delay="500">
+    <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
+        <h4 class="u-align-center u-text u-text-4">Python Programming with YTÜ</h4>
+        <a href="https://github.com/Tahabozkurt/My-certificates-Projects-and-Events-I-Attended/blob/main/Taha%20Bozkurt.pdf" 
+           target="_blank">
+            <img class="custom-expanded u-file-link u-image u-image-2" 
+                 src="./EkranResmi2024-12-1621.44.13.png" 
+                 data-image-width="2274" 
+                 data-image-height="1756" 
+                 alt="Python Programming Certificate">
+        </a>
+    </div>
+</div>
+<div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-3" 
+     data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
+    <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
+        <h4 class="u-align-center u-text u-text-5">Data Science &amp;&amp; Al Day 2024</h4>
+        <a href="https://www.linkedin.com/posts/taha-bozkurt-42146b319_data-science-al-activity-7267589278774272001-rxin?utm_source=share&utm_medium=member_desktop" 
+           target="_blank">
+            <img class="custom-expanded u-file-link u-image u-image-3" 
+                 src="./EkranResmi2024-12-1621.47.03.png" 
+                 data-image-width="2842" data-image-height="1504" 
+                 alt="Data Science & AI Day 2024">
+        </a>
+    </div>
+</div>
+<div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-4" 
+     data-animation-name="customAnimationIn" 
+     data-animation-duration="1500" 
+     data-animation-delay="500">
+    <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
+        <h4 class="u-align-center u-text u-text-6">Artificial Intelligence Training</h4>
+        <a href="https://github.com/Tahabozkurt/My-certificates-Projects-and-Events-I-Attended/blob/main/Tahabozkurt.png" 
+           target="_blank">
+            <img class="custom-expanded u-file-link u-image u-image-4" 
+                 src="./EkranResmi2024-12-1621.47.18.png" 
+                 data-image-width="2138" 
+                 data-image-height="1506" 
+                 alt="Artificial Intelligence Training Certificate">
+        </a>
+    </div>
+</div>
           <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-5" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5">
               <h4 class="u-align-center u-text u-text-7">Zirve23 ​&amp; 42lstanbul</h4>
               <img class="custom-expanded u-image u-image-5" src="./WhatsAppImage2024-12-14at14.15.10.jpeg" data-image-width="1734" data-image-height="3072">
             </div>
           </div>
-          <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-6" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-6">
-              <h4 class="u-align-center u-text u-text-8"> My Game Projects</h4>
-              <img class="custom-expanded u-file-link u-image u-image-6" src="./EkranResmi2024-12-1622.11.30.png" data-image-width="1192" data-image-height="1056" data-href="files/adamasmaca.rtf" data-target="_blank">
-            </div>
-          </div>
+<div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-6" 
+     data-animation-name="customAnimationIn" 
+     data-animation-duration="1500" 
+     data-animation-delay="500">
+    <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-6">
+        <h4 class="u-align-center u-text u-text-8">My Game Projects</h4>
+        <a href="https://github.com/Tahabozkurt/My-certificates-Projects-and-Events-I-Attended/blob/main/adamasmaca.py" 
+           target="_blank">
+            <img class="custom-expanded u-file-link u-image u-image-6" 
+                 src="./EkranResmi2024-12-1622.11.30.png" 
+                 data-image-width="1192" 
+                 data-image-height="1056" 
+                 alt="My Game Projects - Adamasmaca">
+        </a>
+    </div>
+</div>
         </div>
       </div>
     </section>
@@ -163,7 +214,7 @@
             <div class="u-container-style u-grey-5 u-list-item u-radius u-repeater-item u-shape-round u-list-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-1">
                 <h4 class="u-text u-text-2"> &nbsp;<span class="u-file-icon u-icon u-text-palette-1-base">
-                    <img src="images/128e58b0.png" alt="">
+                    <img src="./128e58b0.png" alt="">
                   </span>Reading Book
                 </h4>
                 <p class="u-text u-text-3"> I like to read books in my free time. ​The books that I read this year are: "Sefiller", "Küçük Prens", "Uçurtma Avcısı", "Şeker Portakalı", "Cesur Yeni Dünya". The book that I'm currently reading is "Uğultulu Tepeler".</p>
@@ -224,7 +275,7 @@
                       </div>
                       <div class="u-form-group u-form-partition-factor-2 u-form-phone u-form-group-4">
                         <label for="phone-6f45" class="u-form-control-hidden u-label">Phone</label>
-                        <input type="tel" pattern="\+?\d{0,2}[\s\(\-]?([0-9]{3})[\s\)\-]?([\s\-]?)([0-9]{3})[\s\-]?([0-9]{2})[\s\-]?([0-9]{2})" placeholder="Enter your phone (e.g. +14155552675)" id="phone-6f45" name="phone" class="u-border-none u-input u-input-rectangle" required="">
+                        <input type="tel" pattern="\+?\d{0,2}[\s\(\-]?([0-9]{3})[\s\)\-]?([\s\-]?)([0-9]{3})[\s\-]?([0-9]{2})[\s\-]?([0-9]{2})" placeholder="Enter your phone (e.g. +905678905412)" id="phone-6f45" name="phone" class="u-border-none u-input u-input-rectangle" required="">
                       </div>
                       <div class="u-form-group u-form-message u-form-group-5">
                         <label for="message-b04a" class="u-form-control-hidden u-label">Message</label>
@@ -241,20 +292,20 @@
                     </form>
                   </div>
                   <div class="u-social-icons u-spacing-10 u-social-icons-1">
-                    <a class="u-social-url" target="_blank" href="">
-                      <span class="u-icon u-icon-circle u-social-facebook u-social-icon u-icon-1">
+                <!--      <a class="u-social-url" target="_blank" href=""> -->
+                    <!--  <span class="u-icon u-icon-circle u-social-facebook u-social-icon u-icon-1"> -->
                         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112.2 112.2" style=""><use xlink:href="#svg-5f4f"></use></svg>
                         <svg x="0px" y="0px" viewBox="0 0 112.2 112.2" enable-background="new 0 0 112.2 112.2" xml:space="preserve" id="svg-5f4f" class="u-svg-content"><path d="M75.5,28.8H65.4c-1.5,0-4,0.9-4,4.3v9.4h13.9l-1.5,15.8H61.4v45.1H42.8V58.3h-8.8V42.4h8.8V32.2 c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"></path></svg>
                       </span>
                     </a>
-                    <a class="u-social-url" target="_blank" href="">
-                      <span class="u-icon u-icon-circle u-social-icon u-social-twitter u-icon-2">
+               <!--       <a class="u-social-url" target="_blank" href="">
+                      <span class="u-icon u-icon-circle u-social-icon u-social-twitter u-icon-2"> -->
                         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112.2 112.2" style=""><use xlink:href="#svg-a709"></use></svg>
                         <svg x="0px" y="0px" viewBox="0 0 112.2 112.2" enable-background="new 0 0 112.2 112.2" xml:space="preserve" id="svg-a709" class="u-svg-content"><path d="M92.2,38.2c0,0.8,0,1.6,0,2.3c0,24.3-18.6,52.4-52.6,52.4c-10.6,0.1-20.2-2.9-28.5-8.2 c1.4,0.2,2.9,0.2,4.4,0.2c8.7,0,16.7-2.9,23-7.9c-8.1-0.2-14.9-5.5-17.3-12.8c1.1,0.2,2.4,0.2,3.4,0.2c1.6,0,3.3-0.2,4.8-0.7 c-8.4-1.6-14.9-9.2-14.9-18c0-0.2,0-0.2,0-0.2c2.5,1.4,5.4,2.2,8.4,2.3c-5-3.3-8.3-8.9-8.3-15.4c0-3.4,1-6.5,2.5-9.2 c9.1,11.1,22.7,18.5,38,19.2c-0.2-1.4-0.4-2.8-0.4-4.3c0.1-10,8.3-18.2,18.5-18.2c5.4,0,10.1,2.2,13.5,5.7c4.3-0.8,8.1-2.3,11.7-4.5 c-1.4,4.3-4.3,7.9-8.1,10.1c3.7-0.4,7.3-1.4,10.6-2.9C98.9,32.3,95.7,35.5,92.2,38.2z"></path></svg>
                       </span>
                     </a>
-                    <a class="u-social-url" target="_blank" href="">
-                      <span class="u-icon u-icon-circle u-social-icon u-social-instagram u-icon-3">
+               <!--       <a class="u-social-url" target="_blank" href="">
+                      <span class="u-icon u-icon-circle u-social-icon u-social-instagram u-icon-3"> -->
                         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112.2 112.2" style=""><use xlink:href="#svg-0b43"></use></svg>
                         <svg x="0px" y="0px" viewBox="0 0 112.2 112.2" enable-background="new 0 0 112.2 112.2" xml:space="preserve" id="svg-0b43" class="u-svg-content"><path d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"></path><path d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"></path><path d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7 V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7 c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"></path></svg>
                       </span>
