--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="u-container-style u-layout-cell u-size-36 u-layout-cell-2">
                         <div class="u-container-layout u-valign-bottom u-container-layout-2">
                             <img class="u-image u-image-default u-image-2" 
-                                 src="./resim2.png" 
+                                 src="./WhatsAppImage2024-12-14at14.15.13.jpeg" 
                                  alt="Sağ Alt Resim" 
                                  style="position: absolute; right: 30px; bottom: 35px; width: 700px; height: auto;">
                         </div>
