--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
         </div>
     </div>
 </section>
-
-    <section class="u-align-center u-clearfix u-gradient u-section-3" src="" id="carousel_00e5">
+  <section class="u-align-center u-clearfix u-gradient u-section-3" src="" id="carousel_00e5">
       <div class="u-expanded-width u-gradient u-shape u-shape-rectangle u-shape-1"></div>
       <h2 class="u-align-center u-text u-text-body-alt-color u-text-default u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1500"> My certificates, Projects and Events I Attended</h2>
       <p class="u-align-center u-text u-text-grey-25 u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250"> I aim to reflect my experience in the field of Software Engineering and my analytical thinking skills to every project. My detailed CV is available here.</p>
@@ -129,7 +128,7 @@
           <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
             <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1">
               <h4 class="u-align-center u-text u-text-3"> Python Programming for Data Science</h4>
-              <img class="custom-expanded u-image u-image-1" src="./EkranResmi2024-12-1621.44.13.png" data-image-width="2274" data-image-height="1756">
+              <img class="custom-expanded u-image u-image-1" src="./certificate-491399358.jpg" data-image-width="2274" data-image-height="1756">
             </div>
           </div>
 <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-2" 
