--- a/index.html
+++ b/index.html
@@ -125,12 +125,18 @@
       <p class="u-align-center u-text u-text-grey-25 u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="250"> I aim to reflect my experience in the field of Software Engineering and my analytical thinking skills to every project. My detailed CV is available here.</p>
       <div class="u-list u-list-1">
         <div class="u-repeater u-repeater-1">
-          <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1">
-              <h4 class="u-align-center u-text u-text-3"> Python Programming for Data Science</h4>
-              <img class="custom-expanded u-image u-image-1" src="./certificate-491399358.jpg" data-image-width="2274" data-image-height="1756">
-            </div>
-          </div>
+     <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-1" 
+     data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
+  <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1">
+    <h4 class="u-align-center u-text u-text-3">Python Programming for Data Science</h4>
+    <a href="https://github.com/Tahabozkurt/My-certificates-Projects-and-Events-I-Attended/blob/main/certificate-491399358.jpg" target="_blank">
+      <img class="custom-expanded u-image u-image-1" 
+           src="./certificate-491399358.jpg" 
+           alt="Python Programming for Data Science Certificate" 
+           data-image-width="2274" data-image-height="1756">
+    </a>
+  </div>
+</div>
 <div class="u-align-center u-black u-container-style u-custom-item u-list-item u-radius u-repeater-item u-shape-round u-list-item-2" 
      data-animation-name="customAnimationIn" 
      data-animation-duration="1500" 
