--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                       </div>
                       <div class="u-form-group u-form-partition-factor-2 u-form-phone u-form-group-4">
                         <label for="phone-6f45" class="u-form-control-hidden u-label">Phone</label>
-                        <input type="tel" pattern="\+?\d{0,2}[\s\(\-]?([0-9]{3})[\s\)\-]?([\s\-]?)([0-9]{3})[\s\-]?([0-9]{2})[\s\-]?([0-9]{2})" placeholder="Enter your phone (e.g. +905678905412)" id="phone-6f45" name="phone" class="u-border-none u-input u-input-rectangle" required="">
+                        <input type="tel" pattern="\+?\d{0,2}[\s\(\-]?([0-9]{3})[\s\)\-]?([\s\-]?)([0-9]{3})[\s\-]?([0-9]{2})[\s\-]?([0-9]{2})" placeholder="Enter your phone (05*********)" id="phone-6f45" name="phone" class="u-border-none u-input u-input-rectangle" required="">
                       </div>
                       <div class="u-form-group u-form-message u-form-group-5">
                         <label for="message-b04a" class="u-form-control-hidden u-label">Message</label>
