--- a/index.html
+++ b/index.html
@@ -262,30 +262,28 @@
                 <div class="u-container-layout u-valign-middle u-container-layout-1">
                   <h2 class="u-align-left u-text u-text-1">Contact with Me </h2>
                   <div class="u-form u-form-1">
-                    <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form" style="padding: 0px;" source="email" name="form">
-                      <div class="u-form-email u-form-group u-form-partition-factor-2 u-form-group-1">
-                        <label for="email-b04a" class="u-form-control-hidden u-label">Email</label>
-                        <input type="email" placeholder="Enter a valid email address" id="email-b04a" name="email" class="u-border-none u-input u-input-rectangle" required="">
-                      </div>
-                      <div class="u-form-group u-form-name u-form-partition-factor-2 u-form-group-2">
-                        <label for="name-b04a" class="u-form-control-hidden u-label">Name</label>
-                        <input type="text" placeholder="Enter your Name" id="name-b04a" name="name" class="u-border-none u-input u-input-rectangle" required="">
-                      </div>
-                      <div class="u-form-address u-form-group u-form-partition-factor-2 u-form-group-3">
-                        <label for="address-920c" class="u-form-control-hidden u-label">Address</label>
-                        <input type="text" placeholder="Enter your address" id="address-920c" name="address" class="u-border-none u-input u-input-rectangle" required="">
-                      </div>
-                      <div class="u-form-group u-form-partition-factor-2 u-form-phone u-form-group-4">
-                      </div>
-                      <div class="u-form-group u-form-message u-form-group-5">
-                        <label for="message-b04a" class="u-form-control-hidden u-label">Message</label>
-                        <textarea placeholder="Enter your message" rows="4" cols="50" id="message-b04a" name="message" class="u-border-none u-input u-input-rectangle" required=""></textarea>
-                      </div>
-                      <div class="u-align-left u-form-group u-form-submit u-form-group-6">
-                        <a href="#" class="u-border-none u-btn u-btn-submit u-button-style u-custom-color-3 u-btn-1">SEND</a>
-                        <input type="submit" value="submit" class="u-form-control-hidden">
-                      </div>
-                      <div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
+                   <form action="process_form.php" method="POST" class="u-clearfix u-form-spacing-20 u-form-vertical u-inner-form" style="padding: 0px;" name="form">
+			  <div class="u-form-email u-form-group u-form-partition-factor-2 u-form-group-1">
+			    <label for="email-b04a" class="u-form-control-hidden u-label">Email</label>
+			    <input type="email" placeholder="Enter a valid email address" id="email-b04a" name="email" class="u-border-none u-input u-input-rectangle" required="">
+			  </div>
+			  <div class="u-form-group u-form-name u-form-partition-factor-2 u-form-group-2">
+			    <label for="name-b04a" class="u-form-control-hidden u-label">Name</label>
+			    <input type="text" placeholder="Enter your Name" id="name-b04a" name="name" class="u-border-none u-input u-input-rectangle" required="">
+			  </div>
+			  <div class="u-form-address u-form-group u-form-partition-factor-2 u-form-group-3">
+			    <label for="address-920c" class="u-form-control-hidden u-label">Address</label>
+			    <input type="text" placeholder="Enter your address" id="address-920c" name="address" class="u-border-none u-input u-input-rectangle" required="">
+			  </div>
+			  <div class="u-form-group u-form-message u-form-group-5">
+			    <label for="message-b04a" class="u-form-control-hidden u-label">Message</label>
+			    <textarea placeholder="Enter your message" rows="4" cols="50" id="message-b04a" name="message" class="u-border-none u-input u-input-rectangle" required=""></textarea>
+			  </div>
+			  <div class="u-align-left u-form-group u-form-submit u-form-group-6">
+			    <button type="submit" class="u-border-none u-btn u-btn-submit u-button-style u-custom-color-3 u-btn-1">SEND</button>
+			  </div>
+			</form>
+         		<div class="u-form-send-message u-form-send-success"> Thank you! Your message has been sent. </div>
                       <div class="u-form-send-error u-form-send-message"> Unable to send your message. Please fix errors then try again. </div>
                       <input type="hidden" value="" name="recaptchaResponse">
                       <input type="hidden" name="formServices" value="e32b87ee-7ce3-ed32-b3af-350be207f469">
